# AI-Healthcare-Platform

./: ARCHITECTURE.md  CORS_AUDIT.md  FINAL_DEPLOYMENT_READINESS.md  RENDER_BLUEPRINT_AUDIT.md  render.yaml
AI-Healthcare-Agent/backend/: .env.example  .pre-commit-config.yaml  BENCHMARK_SUMMARY.md  Dockerfile  INTEGRATION_AUDIT.md  LANGGRAPH_RUNTIME_AUDIT.md  PERFORMANCE_DASHBOARD.json  PHASE_V_IMPLEMENTATION_REPORT.md  SYSTEM_READINESS.md  VALIDATION_REPORT.md  alembic.ini  pyproject.toml  requirements.txt  startup.sh
AI-Healthcare-Agent/backend/alembic/: env.py
AI-Healthcare-Agent/backend/alembic/versions/: 0001_initial_schema.py  0002_add_documents.py  0003_add_ocr_columns.py  0004_add_memory_entries.py  0005_add_vector_index_state.py  0006_add_doctor_timezone.py
AI-Healthcare-Agent/backend/app/: main.py
AI-Healthcare-Agent/backend/app/agents/: __init__.py  agent_context.py  agent_executor.py  agent_factory.py  agent_registry.py  agent_response.py  agent_service.py  agent_state.py  base_agent.py  config.py  exceptions.py  execution_engine.py  orchestrator.py
AI-Healthcare-Agent/backend/app/ai/: __init__.py  base_provider.py  config.py  exceptions.py  provider_factory.py  provider_registry.py
AI-Healthcare-Agent/backend/prompts/: PROMPT_INDEX.md
AI-Healthcare-Agent/backend/scripts/: check_deployment_readiness.py  demo_scenarios.py  generate_extraction_stats.py  generate_sample_report.py  import_datasets.py  run_batch_benchmark.py  security_audit.py  vector_index_cli.py
AI-Healthcare-Agent/backend/tests/: conftest.py  test_vector_recovery.py
(+740 files in other folders)
